feat: fetch data from API instead

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,4 @@
 GOOGLE_API_KEY=
 OPENAI_API_KEY=
 LOCAL_MODEL_ENDPOINT=
-NEO4J_URI=
-NEO4J_AUTH=username/password
+DATA_API_ENDPOINT=http://localhost:8000
